[upd] add some api for login / logout / token
