# src/routes/user.routes.js
@@ -2,6 +2,7 @@ module.exports = (app) => {
   const router = require('express').Router();
   const users = require('../controllers/user.controller');
 
+  router.get('/me', users.findMe);
   router.get('/', users.findAll);
   router.get('/:id', users.findOne);
   router.post('/', users.create);
